[package]
name = "treadmill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "4.3.0"
crossbeam-channel = "0.5.7"
futures-lite = "1.12.0"
once_cell = "1.17.1"
parking = "2.0.0"
waker-fn = "1.1.0"
