[package]
name = "treadmill-examples"
version = "0.1.0"
edition = "2021"


[dependencies]
treadmill = { path = "../treadmill" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-channel = "1.8.0"
tracing = "0.1.37"

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "channels"
path = "src/channels.rs"
