[package]
name = "treadmill-examples"
version = "0.1.0"
edition = "2021"


[dependencies]
treadmill = { path = "../treadmill" }
treadmill-hyper = { path = "../treadmill-hyper", features = ["server"] }
treadmill-macros = { path = "../treadmill-macros" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-channel = "1.8.0"
tracing = "0.1.37"
hyper = { version = "0.14.25", features = ["server", "http1"] }
futures-lite = "1.13.0"

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "channels"
path = "src/channels.rs"

[[bin]]
name = "server"
path = "src/server.rs"
