[package]
name = "treadmill-hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["server", "client", "stream", "http1", "http2"]
server = ["hyper/server"]
client = ["hyper/client"]
stream = ["hyper/stream"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

[dependencies]
async-io = "1.13.0"
futures-lite = "1.13.0"
hyper = { version = "0.14.25" }
tokio = { version = "1.27.0", default-features = false }
tracing = "0.1.37"
treadmill = { path = "../treadmill" }
