[package]
name = "treadmill"
version = "0.1.0"
edition = "2021"

[features]
default = ["macros"]
macros = ["treadmill-macros"]

[dependencies]
async-task = "4.3.0"
crossbeam-deque = "0.8.3"
fastrand = "1.9.0"
futures-lite = "1.12.0"
num_cpus = "1.15.0"
once_cell = "1.17.1"
parking = "2.0.0"
tracing = "0.1.37"
treadmill-macros = { path = "../treadmill-macros", optional = true }
